@@ -1383,6 +1383,7 @@ linux (5.10.221-1) UNRELEASED; urgency=medium
   * Bump ABI to 31
   * Refresh "fanotify: Taint on use of FANOTIFY_ACCESS_PERMISSIONS"
   * [rt] Refresh "sunrpc: Make svc_xprt_do_enqueue() use"
+  * Refresh "firmware: Remove redundant log messages from drivers"
 
  -- Salvatore Bonaccorso <carnil@debian.org>  Thu, 20 Jun 2024 20:30:59 +0200
 
